<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    tools:context=".ui.request.RequestDialog">


    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:text="@string/requestDialogTitle"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView7"
        android:layout_marginTop="12dp"
        android:text="@string/requestDialogContent"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/requestDialogUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView21"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="8dp"
        android:textSize="22sp" />

    <Button
        android:id="@+id/requestDialogAccept"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/requestDialogUsername"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="0dp"
        android:text="@string/requestDialogAccept"
        android:textColor="@color/greenish_primary" />

    <Button
        android:id="@+id/requestDialogReject"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/requestDialogAccept"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="14dp"
        android:layout_toStartOf="@+id/requestDialogAccept"
        android:text="@string/requestDialogReject"
        android:textColor="#930000" />

</RelativeLayout>