<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    tools:context=".ui.dialogs.AddContactDialog">


    <TextView
        android:id="@+id/contactDialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:text="@string/contactDialogTitle"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/contactDialogDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/contactDialogTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/contactDialogDescription"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/addContactEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/contactDialogDescription"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:maxWidth="300dp"
        android:minWidth="300dp" />

    <Button
        android:id="@+id/sendContactRequestButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addContactEmail"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="0dp"
        android:text="@string/sendRequest"
        />

    <Button
        android:id="@+id/closeContactRequestButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addContactEmail"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="12dp"
        android:layout_toStartOf="@+id/sendContactRequestButton"
        android:backgroundTint="#00FFFFFF"
        android:elevation="0dp"
        android:text="@string/Dismiss"
        android:textColor="@color/greenish_primary"
        android:stateListAnimator="@null"/>

</RelativeLayout>